--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "prueba-tecnica-inditex",
   "version": "0.1.0",
   "private": true,
+  "author": {"name": "Miguel Dario Garcia Quintas"},
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -9,12 +10,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "next": "14.2.3",
     "react": "^18",
-    "react-dom": "^18",
-    "next": "14.2.3"
+    "react-dom": "^18"
   },
   "devDependencies": {
+    "@types/node": "20.13.0",
+    "@types/react": "18.3.3",
     "postcss": "^8",
-    "tailwindcss": "^3.4.1"
+    "tailwindcss": "^3.4.1",
+    "typescript": "5.4.5"
   }
 }
