--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "prueba-tecnica-inditex",
   "version": "0.1.0",
   "private": true,
-  "author": {"name": "Miguel Dario Garcia Quintas"},
+  "author": {
+    "name": "Miguel Dario Garcia Quintas"
+  },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -18,7 +20,6 @@
     "@types/node": "20.13.0",
     "@types/react": "18.3.3",
     "postcss": "^8",
-    "tailwindcss": "^3.4.1",
-    "typescript": "5.4.5"
+    "tailwindcss": "^3.4.1"
   }
 }
